refactor resource page
